[project]
name = "x-twitter-thread-dump"
version = "0.1.0"
description = "A tool to dump threads and media from X (formerly Twitter)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "more-itertools>=10.7.0",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "xclienttransaction>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.9.1",
    "uvicorn>=0.34.2",
    "aiorwlock>=1.5.0",
    "logfire[fastapi,httpx,system-metrics]>=3.21.1",
]

[project.scripts]
x-twitter-thread-dump = "x_twitter_thread_dump.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL",  # select all checks by default
]
ignore = [
    # single rule exclude
    "COM812",    # will be handled by ruff format
    "ISC001",    # will be handled by ruff format
    "EM101",     # allow string literal in error message
    "EM102",     # allow f-string in error message
    "TRY003",    # allow long exception message
    "TC001",     # typing related
    "TC002",     # typing related
    "TC003",     # typing related
    "TC006",     # typing related
    "ASYNC109",  # timeout in async functions
    "FAST003",   # path param not in signature
    "UP040",     # use type keyword for type aliases
    "S602",      # maybe unsafe shell
    "S607",      # partial executable path
    "ERA001",    # allow commented-out code

    # full rule exclude
    "D",   # ignore docstrings
    "FA",  # ignore future annotations
    "DTZ",  # ignore timezone checks
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
strict = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = false
show_column_numbers = true
show_error_codes = true

[tool.logfire]
ignore_no_config = true
